# tuna-lm

./: .gitmodules  .pre-commit-config.yaml  LICENSE  NOTES.md  Notes - Debugging.md  README.md  TODO.md  pyproject.toml  requirements.txt  sft.sbatch
conf/: 1B_full_single_device.yaml
debugging/: README.md  generate.py  working_generation_config.yaml  working_generation_config_extended_base.yaml
debugging/working_configs/: extended_cptd.yaml
tunalm/: _asr_instruct_dataset.py  _instruct_dataset.py  asr.py  config.py  extend_llama3_embedding.py  extend_tiktoken.py  extendllama3.py  finetune.py  finetune_mod.py  full_finetune_single_device.py  generate.py  generate_sample.py  inference.py  inference_asr.py  sft.py  train.py  utils.py  validate_offline.py
tunalm/conf/: 1B_full_single_device.yaml
tunalm/configs/: 1B_extension.yaml  1B_finetune.yaml  1B_full_single_device.yaml  1B_inference.yaml  1B_sft.yaml  1B_validate_offline.yaml  generation.yaml  sft.yaml
tunalm/configs_1B/: finetune.yaml  inference.yaml  sft.yaml
tunalm/configs_inference/: extended_cptd.yaml  inference_asr.yaml  inference_asr_ls.yaml  inference_asr_mls.yaml
